net: get rid of SET_ETHTOOL_OPS (bsc#911105 FATE#317501).

--- a/series.conf
+++ b/series.conf
@@ -15004,6 +15004,7 @@
 	patches.drivers/enic-0020-enic-Don-t-receive-packets-when-the-napi-budget-0.patch
 	patches.drivers/enic-0021-enic-Call-dev_kfree_skb_any-instead-of-dev_kfree_skb.patch
 	patches.drivers/enic-0022-net-enic-include-irq.h-for-irqreturn_t-definitions.patch
+	patches.drivers/enic-0023-net-get-rid-of-SET_ETHTOOL_OPS.patch
 
 	########################################################
 	# Wireless Networking
