driver/net: enic: Add multi tx support for enic (bsc#911105 FATE#317501).

--- a/series.conf
+++ b/series.conf
@@ -14992,6 +14992,7 @@
 	patches.drivers/enic-0008-drivers-net-enic-Adding-support-for-Cisco-Low-Latenc.patch
 	patches.drivers/enic-0009-drivers-net-enic-Add-an-interface-for-USNIC-to-inter.patch
 	patches.drivers/enic-0010-drivers-net-enic-Generate-notification-of-hardware-c.patch
+	patches.drivers/enic-0011-driver-net-enic-Add-multi-tx-support-for-enic.patch
 
 	########################################################
 	# Wireless Networking
