--- a/series.conf
+++ b/series.conf
@@ -15008,6 +15008,7 @@
 	patches.drivers/enic-0024-enic-Add-support-for-adaptive-interrupt-coalescing.patch
 	patches.drivers/enic-0025-enic-Fix-64-bit-divide-on-32bit-system.patch
 	patches.fixes/net-introduce-netif_addr_lock_nested-and-call-if-whe.patch
+	patches.fixes/net-add-dev_uc_sync_multiple-and-dev_mc_sync_multipl.patch
 
 	########################################################
 	# Wireless Networking
