--- a/series.conf
+++ b/series.conf
@@ -15003,6 +15003,7 @@
 	patches.drivers/enic-0019-enic-Use-pci_enable_msix_range-instead-of-pci_enable.patch
 	patches.drivers/enic-0020-enic-Don-t-receive-packets-when-the-napi-budget-0.patch
 	patches.drivers/enic-0021-enic-Call-dev_kfree_skb_any-instead-of-dev_kfree_skb.patch
+	patches.drivers/enic-0022-net-enic-include-irq.h-for-irqreturn_t-definitions.patch
 
 	########################################################
 	# Wireless Networking
