enic: fix lockdep around devcmd_lock (bsc#911105 FATE#317501).

--- a/series.conf
+++ b/series.conf
@@ -15016,6 +15016,7 @@
 	patches.drivers/enic-0029-enic-devcmd-for-adding-IP-5-tuple-hardware-filters.patch
 	patches.drivers/enic-0030-enic-alloc-free-rx_cpu_rmap.patch
 	patches.drivers/enic-0031-enic-Add-Accelerated-RFS-support.patch
+	patches.drivers/enic-0032-enic-fix-lockdep-around-devcmd_lock.patch
 
 	########################################################
 	# Wireless Networking
