enic: Add support for adaptive interrupt coalescing (bsc#911105 FATE#317501).

--- a/series.conf
+++ b/series.conf
@@ -15005,6 +15005,7 @@
 	patches.drivers/enic-0021-enic-Call-dev_kfree_skb_any-instead-of-dev_kfree_skb.patch
 	patches.drivers/enic-0022-net-enic-include-irq.h-for-irqreturn_t-definitions.patch
 	patches.drivers/enic-0023-net-get-rid-of-SET_ETHTOOL_OPS.patch
+	patches.drivers/enic-0024-enic-Add-support-for-adaptive-interrupt-coalescing.patch
 
 	########################################################
 	# Wireless Networking
