net: use SPEED_UNKNOWN and DUPLEX_UNKNOWN when appropriate (bsc#911105 FATE#317501).

--- a/series.conf
+++ b/series.conf
@@ -15011,6 +15011,7 @@
 	patches.fixes/net-add-dev_uc_sync_multiple-and-dev_mc_sync_multipl.patch
 	patches.fixes/net-Add-support-for-device-specific-address-syncing.patch
 	patches.drivers/enic-0026-enic-Update-driver-to-use-__dev_uc-mc_sync-unsync-ca.patch
+	patches.drivers/enic-0027-net-use-SPEED_UNKNOWN-and-DUPLEX_UNKNOWN-when-approp.patch
 
 	########################################################
 	# Wireless Networking
