enic: add stats for dma mapping error (bsc#911105 FATE#317501).

--- a/series.conf
+++ b/series.conf
@@ -15040,6 +15040,7 @@
 	patches.drivers/enic-0052-net-add-skb-frag-size-accessors.patch
 	patches.fixes/net-Add-net_ratelimited_function-and-net_-level-_rat.patch
 	patches.drivers/enic-0053-enic-check-dma_mapping_error.patch
+	patches.drivers/enic-0054-enic-add-stats-for-dma-mapping-error.patch
 
 	########################################################
 	# Wireless Networking
