enic: Fix 64 bit divide on 32bit system (bsc#911105 FATE#317501).

--- a/series.conf
+++ b/series.conf
@@ -15006,6 +15006,7 @@
 	patches.drivers/enic-0022-net-enic-include-irq.h-for-irqreturn_t-definitions.patch
 	patches.drivers/enic-0023-net-get-rid-of-SET_ETHTOOL_OPS.patch
 	patches.drivers/enic-0024-enic-Add-support-for-adaptive-interrupt-coalescing.patch
+	patches.drivers/enic-0025-enic-Fix-64-bit-divide-on-32bit-system.patch
 
 	########################################################
 	# Wireless Networking
