enic: remove #ifdef CONFIG_RFS_ACCEL around filter structures (bsc#911105 FATE#317501).

--- a/series.conf
+++ b/series.conf
@@ -15021,6 +15021,7 @@
 	patches.drivers/enic-0034-enic-Kill-unused-variable-in-enic_rfs_flw_tbl_init.patch
 	patches.drivers/enic-0035-enic-Make-dummy-rfs-functions-inline-to-fix-CONFIG_R.patch
 	patches.drivers/enic-0036-enic-fix-return-values-in-enic_set_coalesce.patch
+	patches.drivers/enic-0037-enic-remove-ifdef-CONFIG_RFS_ACCEL-around-filter-str.patch
 
 	########################################################
 	# Wireless Networking
