drivers/net: fix up function prototypes after __dev* removals (bsc#911105 FATE#317501).

--- a/series.conf
+++ b/series.conf
@@ -14984,6 +14984,7 @@
 	# enic SP4 update (bsc#911105 FATE#317501)
 	patches.drivers/enic-0001-net-Remove-bogus-dependencies-on-INET.patch
 	patches.drivers/enic-0002-enic-remove-__dev-attributes.patch
+	patches.drivers/enic-0003-drivers-net-fix-up-function-prototypes-after-__dev-r.patch
 
 	########################################################
 	# Wireless Networking
