enic: fix return value in _vnic_dev_cmd (bsc#911105 FATE#317501).

--- a/series.conf
+++ b/series.conf
@@ -15012,6 +15012,7 @@
 	patches.fixes/net-Add-support-for-device-specific-address-syncing.patch
 	patches.drivers/enic-0026-enic-Update-driver-to-use-__dev_uc-mc_sync-unsync-ca.patch
 	patches.drivers/enic-0027-net-use-SPEED_UNKNOWN-and-DUPLEX_UNKNOWN-when-approp.patch
+	patches.drivers/enic-0028-enic-fix-return-value-in-_vnic_dev_cmd.patch
 
 	########################################################
 	# Wireless Networking
