enic: implement rx_copybreak (bsc#911105 FATE#317501).

--- a/series.conf
+++ b/series.conf
@@ -15025,6 +15025,7 @@
 	patches.drivers/enic-0038-enic-Add-ethtool-support-to-show-classifier-filters-.patch
 	patches.drivers/enic-0039-enic-use-pci_zalloc_consistent.patch
 	patches.drivers/enic-0040-PCI-Remove-DEFINE_PCI_DEVICE_TABLE-macro-use.patch
+	patches.drivers/enic-0041-enic-implement-rx_copybreak.patch
 
 	########################################################
 	# Wireless Networking
