--- a/series.conf
+++ b/series.conf
@@ -15007,6 +15007,7 @@
 	patches.drivers/enic-0023-net-get-rid-of-SET_ETHTOOL_OPS.patch
 	patches.drivers/enic-0024-enic-Add-support-for-adaptive-interrupt-coalescing.patch
 	patches.drivers/enic-0025-enic-Fix-64-bit-divide-on-32bit-system.patch
+	patches.fixes/net-introduce-netif_addr_lock_nested-and-call-if-whe.patch
 
 	########################################################
 	# Wireless Networking
