driver/net: enic: record q_number and rss_hash for skb (bsc#911105 FATE#317501).

--- a/series.conf
+++ b/series.conf
@@ -14993,6 +14993,7 @@
 	patches.drivers/enic-0009-drivers-net-enic-Add-an-interface-for-USNIC-to-inter.patch
 	patches.drivers/enic-0010-drivers-net-enic-Generate-notification-of-hardware-c.patch
 	patches.drivers/enic-0011-driver-net-enic-Add-multi-tx-support-for-enic.patch
+	patches.drivers/enic-0012-driver-net-enic-record-q_number-and-rss_hash-for-skb.patch
 
 	########################################################
 	# Wireless Networking
