net: enic: slight optimization of addr compare (bsc#911105 FATE#317501).

--- a/series.conf
+++ b/series.conf
@@ -14999,6 +14999,7 @@
 	patches.drivers/enic-0015-driver-net-enic-update-enic-maintainers-and-driver.patch
 	patches.drivers/enic-0016-net-enic-remove-unnecessary-pci_set_drvdata.patch
 	patches.drivers/enic-0017-net-cisco-enic-calls-skb_set_hash.patch
+	patches.drivers/enic-0018-net-enic-slight-optimization-of-addr-compare.patch
 
 	########################################################
 	# Wireless Networking
