net: cisco-enic calls skb_set_hash (bsc#911105 FATE#317501).

--- a/series.conf
+++ b/series.conf
@@ -14998,6 +14998,7 @@
 	patches.drivers/enic-0014-driver-net-enic-Exposing-symbols-for-Cisco-s-low-lat.patch
 	patches.drivers/enic-0015-driver-net-enic-update-enic-maintainers-and-driver.patch
 	patches.drivers/enic-0016-net-enic-remove-unnecessary-pci_set_drvdata.patch
+	patches.drivers/enic-0017-net-cisco-enic-calls-skb_set_hash.patch
 
 	########################################################
 	# Wireless Networking
