--- a/series.conf
+++ b/series.conf
@@ -14983,6 +14983,7 @@
 
 	# enic SP4 update (bsc#911105 FATE#317501)
 	patches.drivers/enic-0001-net-Remove-bogus-dependencies-on-INET.patch
+	patches.drivers/enic-0002-enic-remove-__dev-attributes.patch
 
 	########################################################
 	# Wireless Networking
