--- a/series.conf
+++ b/series.conf
@@ -15034,6 +15034,7 @@
 	patches.drivers/enic-0046-enic-use-napi_schedule_irqoff.patch
 	patches.drivers/enic-0047-enic-use-spin_lock-wq_lock-instead-of-spin_lock_irqs.patch
 	patches.drivers/enic-0048-enic-fix-rx-skb-checksum.patch
+	patches.drivers/enic-0049-enic-free-all-rq-buffs-when-allocation-fails.patch
 
 	########################################################
 	# Wireless Networking
