--- a/series.conf
+++ b/series.conf
@@ -15056,6 +15056,7 @@
 	patches.drivers/e1000e-0013-e1000e-cleanup-unnecessary-line-wrap.patch
 	patches.drivers/e1000e-0014-e1000e-cleanup-magic-number.patch
 	patches.drivers/e1000e-0015-e1000e-cleanup-code-duplication.patch
+	patches.drivers/e1000e-0016-e1000e-merge-multiple-conditional-statements-into-on.patch
 
 	########################################################
 	# Wireless Networking
