--- a/series.conf
+++ b/series.conf
@@ -15200,6 +15200,7 @@
 	patches.drivers/e1000e-0157-e1000e-Add-support-for-EEE-in-Sx-states.patch
 	patches.drivers/e1000e-0158-e1000e-Fix-EEE-in-S5-w-Runtime-PM-enabled.patch
 	patches.drivers/e1000e-0159-e1000e-Fix-Runtime-PM-blocks-EEE-link-negotiation-in.patch
+	patches.drivers/e1000e-0160-e1000e-fix-trivial-kernel-doc-typos.patch
 
 	########################################################
 	# Wireless Networking
