--- a/series.conf
+++ b/series.conf
@@ -15111,6 +15111,7 @@
 	patches.drivers/e1000e-0068-e1000e-cleanup-SPACING-checkpatch-checks.patch
 	patches.drivers/e1000e-0069-e1000e-cleanup-add-remove-blank-lines-where-appropri.patch
 	patches.drivers/e1000e-0070-e1000e-cleanup-unusually-placed-comments.patch
+	patches.drivers/e1000e-0071-e1000e-cleanup-formatting-of-static-structs.patch
 
 	########################################################
 	# Wireless Networking
