--- a/series.conf
+++ b/series.conf
@@ -15065,6 +15065,7 @@
 	patches.drivers/e1000e-0022-e1000e-enable-ECC-on-I217-I218-to-catch-packet-buffe.patch
 	patches.drivers/e1000e-0023-e1000e-prevent-hardware-from-automatically-configuri.patch
 	patches.drivers/e1000e-0024-e1000e-remove-prototype-of-non-existent-function.patch
+	patches.drivers/e1000e-0025-e1000e-update-copyright-date.patch
 
 	########################################################
 	# Wireless Networking
