--- a/series.conf
+++ b/series.conf
@@ -15185,6 +15185,7 @@
 	patches.drivers/e1000e-0142-e1000e-Cleanup-checkpatch-extra-space.patch
 	patches.drivers/e1000e-0143-e1000e-Cleanup-use-of-deprecated-DEFINE_PCI_DEVICE_T.patch
 	patches.drivers/e1000e-0144-e1000e-Workaround-for-dropped-packets-in-Gig-100-spe.patch
+	patches.drivers/e1000e-0145-e1000e-Expand-workaround-for-10Mb-HD-throughput-bug.patch
 
 	########################################################
 	# Wireless Networking
