--- a/series.conf
+++ b/series.conf
@@ -15196,6 +15196,7 @@
 	patches.drivers/e1000e-0153-net-use-SPEED_UNKNOWN-and-DUPLEX_UNKNOWN-when-approp.patch
 	patches.drivers/e1000e-0154-e1000e-remove-unnecessary-break-after-return.patch
 	patches.drivers/e1000e-0155-e1000e-Fix-CRC-errors-with-jumbo-traffic.patch
+	patches.drivers/e1000e-0156-e1000e-Add-code-to-check-return-values-on-NVM-access.patch
 
 	########################################################
 	# Wireless Networking
