--- a/series.conf
+++ b/series.conf
@@ -15062,6 +15062,7 @@
 	patches.drivers/e1000e-0019-e1000e-fix-ethtool-offline-register-test-for-I217.patch
 	patches.drivers/e1000e-0020-e1000e-fix-flow-control-thresholds-for-jumbo-frames-.patch
 	patches.drivers/e1000e-0021-e1000e-add-support-for-IEEE-1588-PTP.patch
+	patches.drivers/e1000e-0022-e1000e-enable-ECC-on-I217-I218-to-catch-packet-buffe.patch
 
 	########################################################
 	# Wireless Networking
