--- a/series.conf
+++ b/series.conf
@@ -15134,6 +15134,7 @@
 	patches.drivers/e1000e-0091-e1000e-Remove-duplicate-assignment-of-default-rx-tx-.patch
 	patches.drivers/e1000e-0092-e1000e-Use-marco-instead-of-digit-for-defining-e1000.patch
 	patches.drivers/e1000e-0093-e1000e-disable-ASPM-L1-on-82583.patch
+	patches.drivers/e1000e-0094-e1000e-iAMT-connections-drop-on-driver-unload-when-j.patch
 
 	########################################################
 	# Wireless Networking
