e1000e: 82577: workaround for link drop issue (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15046,6 +15046,7 @@
 	patches.drivers/e1000e-0003-e1000e-Acquire-release-semaphore-when-writing-each-E.patch
 	patches.drivers/e1000e-0004-e1000e-Invalid-Image-CSUM-bit-changed-for-I217.patch
 	patches.drivers/e1000e-0005-e1000e-helper-functions-for-accessing-EMI-registers.patch
+	patches.drivers/e1000e-0006-e1000e-82577-workaround-for-link-drop-issue.patch
 
 	########################################################
 	# Wireless Networking
