e1000e: cosmetic move of #defines and prototypes to the new ich8lan.h (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15092,6 +15092,7 @@
 	patches.drivers/e1000e-0049-e1000e-use-generic-IEEE-MII-definitions.patch
 	patches.drivers/e1000e-0050-e1000e-cosmetic-move-of-defines-and-prototypes-to-th.patch
 	patches.drivers/e1000e-0051-e1000e-cosmetic-move-of-defines-to-the-new-80003es2l.patch
+	patches.drivers/e1000e-0052-e1000e-cosmetic-move-of-defines-and-prototypes-to-th.patch
 
 	########################################################
 	# Wireless Networking
