e1000e/igb/ixgbe/i40e: fix message terminations (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15179,6 +15179,7 @@
 	patches.drivers/e1000e-0136-e1000e-remove-open-coded-skb_cow_head.patch
 	patches.drivers/e1000e-0137-e1000e-Correctly-include-VLAN_HLEN-when-changing-int.patch
 	patches.drivers/e1000e-0138-e1000e-Enclose-e1000e_pm_thaw-with-CONFIG_PM_SLEEP.patch
+	patches.drivers/e1000e-0139-e1000e-igb-ixgbe-i40e-fix-message-terminations.patch
 
 	########################################################
 	# Wireless Networking
