e1000e: cleanup boolean comparison to true (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15146,6 +15146,7 @@
 	patches.drivers/e1000e-0103-e1000e-Avoid-kernel-crash-during-shutdown.patch
 	patches.drivers/e1000e-0104-e1000e-resolve-checkpatch-JIFFIES_COMPARISON-warning.patch
 	patches.drivers/e1000e-0105-e1000e-balance-semaphore-put-get-for-82573.patch
+	patches.drivers/e1000e-0106-e1000e-cleanup-boolean-comparison-to-true.patch
 
 	########################################################
 	# Wireless Networking
