--- a/series.conf
+++ b/series.conf
@@ -15142,6 +15142,7 @@
 	patches.drivers/e1000e-0099-e1000e-do-not-resume-device-from-RPM-suspend-to-read.patch
 	patches.drivers/e1000e-0100-e1000e-fix-I217-I218-PHY-initialization-flow.patch
 	patches.drivers/e1000e-0101-e1000e-cleanup-whitespace-in-recent-commit.patch
+	patches.drivers/e1000e-0102-e1000e-Add-code-to-check-for-failure-of-pci_disable_.patch
 
 	########################################################
 	# Wireless Networking
