e1000e: Use pci_enable_msix_range() instead of pci_enable_msix() (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15156,6 +15156,7 @@
 	patches.drivers/e1000e-0113-e1000e-fix-compiler-warning-maybe-unitialized-variab.patch
 	patches.drivers/e1000e-0114-e1000e-Fix-a-compile-flag-mis-match-for-suspend-resu.patch
 	patches.drivers/e1000e-0115-e1000e-Fix-compilation-warning-when-CONFIG_PM_SLEEP.patch
+	patches.drivers/e1000e-0116-e1000e-Use-pci_enable_msix_range-instead-of-pci_enab.patch
 
 	########################################################
 	# Wireless Networking
