e1000e: cleanup format of struct e1000_opt_list struct (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15114,6 +15114,7 @@
 	patches.drivers/e1000e-0071-e1000e-cleanup-formatting-of-static-structs.patch
 	patches.drivers/e1000e-0072-e1000e-cleanup-unnecessary-line-breaks.patch
 	patches.drivers/e1000e-0073-e1000e-cleanup-USLEEP_RANGE-checkpatch-checks.patch
+	patches.drivers/e1000e-0074-e1000e-cleanup-format-of-struct-e1000_opt_list-struc.patch
 
 	########################################################
 	# Wireless Networking
