--- a/series.conf
+++ b/series.conf
@@ -15073,6 +15073,7 @@
 	patches.drivers/e1000e-0030-e1000e-cleanup-remove-unnecessary-function-prototype.patch
 	patches.drivers/e1000e-0031-e1000e-do-not-ignore-variables-which-get-set-a-value.patch
 	patches.drivers/e1000e-0032-e1000e-cleanup-do-not-assign-a-variable-a-value-when.patch
+	patches.drivers/e1000e-0033-e1000e-cleanup-remove-e1000_set_d0_lplu_state.patch
 
 	########################################################
 	# Wireless Networking
