--- a/series.conf
+++ b/series.conf
@@ -15102,6 +15102,7 @@
 	patches.drivers/e1000e-0059-e1000e-display-a-warning-message-when-SmartSpeed-wor.patch
 	patches.drivers/e1000e-0060-e1000e-workaround-DMA-unit-hang-on-I218.patch
 	patches.drivers/e1000e-0061-e1000e-fix-runtime-power-management-transitions.patch
+	patches.drivers/e1000e-0062-e1000e-fix-accessing-to-suspended-device.patch
 
 	########################################################
 	# Wireless Networking
