e1000e: fix scheduling while atomic bug (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15128,6 +15128,7 @@
 	patches.drivers/e1000e-0085-e1000e-fix-scheduling-while-atomic-bugs.patch
 	patches.drivers/e1000e-0086-e1000e-fix-numeric-overflow-in-phc-settime-method.patch
 	patches.drivers/e1000e-0087-e1000e-panic-caused-by-Rx-traffic-arriving-while-int.patch
+	patches.drivers/e1000e-0088-e1000e-fix-scheduling-while-atomic-bug.patch
 
 	########################################################
 	# Wireless Networking
