e1000e: cleanup unnecessary line breaks (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15112,6 +15112,7 @@
 	patches.drivers/e1000e-0069-e1000e-cleanup-add-remove-blank-lines-where-appropri.patch
 	patches.drivers/e1000e-0070-e1000e-cleanup-unusually-placed-comments.patch
 	patches.drivers/e1000e-0071-e1000e-cleanup-formatting-of-static-structs.patch
+	patches.drivers/e1000e-0072-e1000e-cleanup-unnecessary-line-breaks.patch
 
 	########################################################
 	# Wireless Networking
