e1000e: delete excessive space character in debug message (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15201,6 +15201,7 @@
 	patches.drivers/e1000e-0158-e1000e-Fix-EEE-in-S5-w-Runtime-PM-enabled.patch
 	patches.drivers/e1000e-0159-e1000e-Fix-Runtime-PM-blocks-EEE-link-negotiation-in.patch
 	patches.drivers/e1000e-0160-e1000e-fix-trivial-kernel-doc-typos.patch
+	patches.drivers/e1000e-0161-e1000e-delete-excessive-space-character-in-debug-mes.patch
 
 	########################################################
 	# Wireless Networking
