e1000e: fix compiler warnings (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15152,6 +15152,7 @@
 	patches.drivers/e1000e-0109-intel-Remove-extern-from-function-prototypes.patch
 	patches.drivers/e1000e-0110-e1000e-Validate-hwtstamp_config-completely-before-ap.patch
 	patches.drivers/e1000e-0111-e1000e-Implement-the-SIOCGHWTSTAMP-ioctl.patch
+	patches.drivers/e1000e-0112-e1000e-fix-compiler-warnings.patch
 
 	########################################################
 	# Wireless Networking
