e1000e: cleanup SPACING checkpatch errors and warnings (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15104,6 +15104,7 @@
 	patches.drivers/e1000e-0061-e1000e-fix-runtime-power-management-transitions.patch
 	patches.drivers/e1000e-0062-e1000e-fix-accessing-to-suspended-device.patch
 	patches.drivers/e1000e-0063-e1000e-cleanup-CODE_INDENT-checkpatch-errors.patch
+	patches.drivers/e1000e-0064-e1000e-cleanup-SPACING-checkpatch-errors-and-warning.patch
 
 	########################################################
 	# Wireless Networking
