e1000e: add support for LTR on I217/I218 (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15122,6 +15122,7 @@
 	patches.drivers/e1000e-0079-e1000e-fix-LED-blink-logic-for-designs-with-LEDs-dri.patch
 	patches.drivers/e1000e-0080-e1000e-long-access-timeouts-when-I217-I218-MAC-and-P.patch
 	patches.drivers/e1000e-0081-e1000e-EEE-capability-advertisement-not-set-disabled.patch
+	patches.drivers/e1000e-0082-e1000e-add-support-for-LTR-on-I217-I218.patch
 
 	########################################################
 	# Wireless Networking
