e1000e: Add missing dma_mapping_error-call in e1000_alloc_jumbo_rx_buffers (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15116,6 +15116,7 @@
 	patches.drivers/e1000e-0073-e1000e-cleanup-USLEEP_RANGE-checkpatch-checks.patch
 	patches.drivers/e1000e-0074-e1000e-cleanup-format-of-struct-e1000_opt_list-struc.patch
 	patches.drivers/e1000e-0075-e1000e-cleanup-move-defines-to-appropriate-header-fi.patch
+	patches.drivers/e1000e-0076-e1000e-Add-missing-dma_mapping_error-call-in-e1000_a.patch
 
 	########################################################
 	# Wireless Networking
