--- a/series.conf
+++ b/series.conf
@@ -15124,6 +15124,7 @@
 	patches.drivers/e1000e-0081-e1000e-EEE-capability-advertisement-not-set-disabled.patch
 	patches.drivers/e1000e-0082-e1000e-add-support-for-LTR-on-I217-I218.patch
 	patches.drivers/e1000e-0083-e1000e-cleanup-unused-defines.patch
+	patches.drivers/e1000e-0084-e1000e-increase-driver-version-number.patch
 
 	########################################################
 	# Wireless Networking
