--- a/series.conf
+++ b/series.conf
@@ -15178,6 +15178,7 @@
 	patches.drivers/e1000e-0135-e1000e-Fix-no-connectivity-when-driver-loaded-with-c.patch
 	patches.drivers/e1000e-0136-e1000e-remove-open-coded-skb_cow_head.patch
 	patches.drivers/e1000e-0137-e1000e-Correctly-include-VLAN_HLEN-when-changing-int.patch
+	patches.drivers/e1000e-0138-e1000e-Enclose-e1000e_pm_thaw-with-CONFIG_PM_SLEEP.patch
 
 	########################################################
 	# Wireless Networking
