e1000e: remove prototype of non-existent function (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15064,6 +15064,7 @@
 	patches.drivers/e1000e-0021-e1000e-add-support-for-IEEE-1588-PTP.patch
 	patches.drivers/e1000e-0022-e1000e-enable-ECC-on-I217-I218-to-catch-packet-buffe.patch
 	patches.drivers/e1000e-0023-e1000e-prevent-hardware-from-automatically-configuri.patch
+	patches.drivers/e1000e-0024-e1000e-remove-prototype-of-non-existent-function.patch
 
 	########################################################
 	# Wireless Networking
