--- a/series.conf
+++ b/series.conf
@@ -15066,6 +15066,7 @@
 	patches.drivers/e1000e-0023-e1000e-prevent-hardware-from-automatically-configuri.patch
 	patches.drivers/e1000e-0024-e1000e-remove-prototype-of-non-existent-function.patch
 	patches.drivers/e1000e-0025-e1000e-update-copyright-date.patch
+	patches.drivers/e1000e-0026-e1000e-correct-maximum-frame-size-on-i217-i218.patch
 
 	########################################################
 	# Wireless Networking
