net: get rid of SET_ETHTOOL_OPS (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15188,6 +15188,7 @@
 	patches.drivers/e1000e-0145-e1000e-Expand-workaround-for-10Mb-HD-throughput-bug.patch
 	patches.drivers/e1000e-0146-e1000e-Fix-issue-with-link-flap-on-82579.patch
 	patches.drivers/e1000e-0147-e1000e-Restrict-MDIO-Slow-Mode-workaround-to-relevan.patch
+	patches.drivers/e1000e-0148-net-get-rid-of-SET_ETHTOOL_OPS.patch
 
 	########################################################
 	# Wireless Networking
