--- a/series.conf
+++ b/series.conf
@@ -15053,6 +15053,7 @@
 	patches.drivers/e1000e-0010-e1000e-resolve-checkpatch-PREFER_PR_LEVEL-warning.patch
 	patches.drivers/e1000e-0011-e1000e-cleanup-redundant-statistics-counter.patch
 	patches.drivers/e1000e-0012-e1000e-cleanup-unusual-comment-placement.patch
+	patches.drivers/e1000e-0013-e1000e-cleanup-unnecessary-line-wrap.patch
 
 	########################################################
 	# Wireless Networking
