--- a/series.conf
+++ b/series.conf
@@ -15057,6 +15057,7 @@
 	patches.drivers/e1000e-0014-e1000e-cleanup-magic-number.patch
 	patches.drivers/e1000e-0015-e1000e-cleanup-code-duplication.patch
 	patches.drivers/e1000e-0016-e1000e-merge-multiple-conditional-statements-into-on.patch
+	patches.drivers/e1000e-0017-e1000e-Use-standard-defines-for-PCIe-Capability-ASPM.patch
 
 	########################################################
 	# Wireless Networking
