e1000e: cleanup unused defines (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15123,6 +15123,7 @@
 	patches.drivers/e1000e-0080-e1000e-long-access-timeouts-when-I217-I218-MAC-and-P.patch
 	patches.drivers/e1000e-0081-e1000e-EEE-capability-advertisement-not-set-disabled.patch
 	patches.drivers/e1000e-0082-e1000e-add-support-for-LTR-on-I217-I218.patch
+	patches.drivers/e1000e-0083-e1000e-cleanup-unused-defines.patch
 
 	########################################################
 	# Wireless Networking
