--- a/series.conf
+++ b/series.conf
@@ -15119,6 +15119,7 @@
 	patches.drivers/e1000e-0076-e1000e-Add-missing-dma_mapping_error-call-in-e1000_a.patch
 	patches.drivers/e1000e-0077-e1000e-additional-error-handling-on-PHY-register-acc.patch
 	patches.drivers/e1000e-0078-e1000e-slow-performance-between-two-82579-connected-.patch
+	patches.drivers/e1000e-0079-e1000e-fix-LED-blink-logic-for-designs-with-LEDs-dri.patch
 
 	########################################################
 	# Wireless Networking
