e1000e: slow performance between two 82579 connected via 10Mbit hub (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15118,6 +15118,7 @@
 	patches.drivers/e1000e-0075-e1000e-cleanup-move-defines-to-appropriate-header-fi.patch
 	patches.drivers/e1000e-0076-e1000e-Add-missing-dma_mapping_error-call-in-e1000_a.patch
 	patches.drivers/e1000e-0077-e1000e-additional-error-handling-on-PHY-register-acc.patch
+	patches.drivers/e1000e-0078-e1000e-slow-performance-between-two-82579-connected-.patch
 
 	########################################################
 	# Wireless Networking
