e1000e: unexpected "Reset adapter" message when cable pulled (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15048,6 +15048,7 @@
 	patches.drivers/e1000e-0005-e1000e-helper-functions-for-accessing-EMI-registers.patch
 	patches.drivers/e1000e-0006-e1000e-82577-workaround-for-link-drop-issue.patch
 	patches.drivers/e1000e-0007-e1000e-fix-enabling-of-EEE-on-82579-and-I217.patch
+	patches.drivers/e1000e-0008-e1000e-unexpected-Reset-adapter-message-when-cable-p.patch
 
 	########################################################
 	# Wireless Networking
