--- a/series.conf
+++ b/series.conf
@@ -15047,6 +15047,7 @@
 	patches.drivers/e1000e-0004-e1000e-Invalid-Image-CSUM-bit-changed-for-I217.patch
 	patches.drivers/e1000e-0005-e1000e-helper-functions-for-accessing-EMI-registers.patch
 	patches.drivers/e1000e-0006-e1000e-82577-workaround-for-link-drop-issue.patch
+	patches.drivers/e1000e-0007-e1000e-fix-enabling-of-EEE-on-82579-and-I217.patch
 
 	########################################################
 	# Wireless Networking
