--- a/series.conf
+++ b/series.conf
@@ -15131,6 +15131,7 @@
 	patches.drivers/e1000e-0088-e1000e-fix-scheduling-while-atomic-bug.patch
 	patches.drivers/e1000e-0089-e1000e-cleanup-whitespace.patch
 	patches.drivers/e1000e-0090-e1000e-Release-mutex-lock-only-if-it-has-been-initia.patch
+	patches.drivers/e1000e-0091-e1000e-Remove-duplicate-assignment-of-default-rx-tx-.patch
 
 	########################################################
 	# Wireless Networking
