e1000e: fix scheduling while atomic bugs (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15125,6 +15125,7 @@
 	patches.drivers/e1000e-0082-e1000e-add-support-for-LTR-on-I217-I218.patch
 	patches.drivers/e1000e-0083-e1000e-cleanup-unused-defines.patch
 	patches.drivers/e1000e-0084-e1000e-increase-driver-version-number.patch
+	patches.drivers/e1000e-0085-e1000e-fix-scheduling-while-atomic-bugs.patch
 
 	########################################################
 	# Wireless Networking
