--- a/series.conf
+++ b/series.conf
@@ -15191,6 +15191,7 @@
 	patches.drivers/e1000e-0148-net-get-rid-of-SET_ETHTOOL_OPS.patch
 	patches.drivers/e1000e-0149-e1000e-82574-82583-TimeSync-errata-for-SYSTIM-read.patch
 	patches.drivers/e1000e-0150-e1000e-Cleanup-parenthesis-around-return-value.patch
+	patches.drivers/e1000e-0151-e1000e-Fix-expand-setting-EEE-link-info-to-all-affec.patch
 
 	########################################################
 	# Wireless Networking
