--- a/series.conf
+++ b/series.conf
@@ -15110,6 +15110,7 @@
 	patches.drivers/e1000e-0067-e1000e-cleanup-PARENTHESIS_ALIGNMENT-checkpatch-chec.patch
 	patches.drivers/e1000e-0068-e1000e-cleanup-SPACING-checkpatch-checks.patch
 	patches.drivers/e1000e-0069-e1000e-cleanup-add-remove-blank-lines-where-appropri.patch
+	patches.drivers/e1000e-0070-e1000e-cleanup-unusually-placed-comments.patch
 
 	########################################################
 	# Wireless Networking
