e1000e: Fix SHRA register access for 82579 (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15168,6 +15168,7 @@
 	patches.drivers/e1000e-0125-e1000e-Feature-Enable-PHY-Ultra-Low-Power-Mode-ULP.patch
 	patches.drivers/e1000e-0126-e1000e-Fix-not-generating-an-error-on-invalid-load-p.patch
 	patches.drivers/e1000e-0127-e1000e-Fix-ethtool-offline-tests-for-82579-parts.patch
+	patches.drivers/e1000e-0128-e1000e-Fix-SHRA-register-access-for-82579.patch
 
 	########################################################
 	# Wireless Networking
