--- a/series.conf
+++ b/series.conf
@@ -15043,6 +15043,7 @@
 	# e1000e SP4 update (bug#909495 FATE#317394)
 	patches.drivers/e1000e-0001-remove-init-of-dev-perm_addr-in-drivers.patch
 	patches.drivers/e1000e-0002-e1000e-SerDes-autoneg-flow-control.patch
+	patches.drivers/e1000e-0003-e1000e-Acquire-release-semaphore-when-writing-each-E.patch
 
 	########################################################
 	# Wireless Networking
