e1000e: convert enums of register offsets and move #defines to regs.h (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15097,6 +15097,7 @@
 	patches.drivers/e1000e-0054-e1000e-cosmetic-move-of-defines-and-function-prototy.patch
 	patches.drivers/e1000e-0055-e1000e-cosmetic-move-of-defines-and-function-prototy.patch
 	patches.drivers/e1000e-0056-e1000e-cosmetic-move-of-defines-and-prototypes-to-th.patch
+	patches.drivers/e1000e-0057-e1000e-convert-enums-of-register-offsets-and-move-de.patch
 
 	########################################################
 	# Wireless Networking
