e1000e: Cleanup checkpatch extra space (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15182,6 +15182,7 @@
 	patches.drivers/e1000e-0139-e1000e-igb-ixgbe-i40e-fix-message-terminations.patch
 	patches.drivers/e1000e-0140-e1000e-Cleanup-return-values-in-ethtool.patch
 	patches.drivers/e1000e-0141-e1000e-Cleanup-to-fix-checkpatch-missing-blank-lines.patch
+	patches.drivers/e1000e-0142-e1000e-Cleanup-checkpatch-extra-space.patch
 
 	########################################################
 	# Wireless Networking
