e1000e: cleanup: remove comments which are no longer applicable (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15083,6 +15083,7 @@
 	patches.drivers/e1000e-0040-e1000e-adjust-PM-QoS-request.patch
 	patches.drivers/e1000e-0041-e1000e-cleanup-remove-unused-define.patch
 	patches.drivers/e1000e-0042-e1000e-cleanup-hw.h.patch
+	patches.drivers/e1000e-0043-e1000e-cleanup-remove-comments-which-are-no-longer-a.patch
 
 	########################################################
 	# Wireless Networking
