e1000e: Fix issue with link flap on 82579 (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15186,6 +15186,7 @@
 	patches.drivers/e1000e-0143-e1000e-Cleanup-use-of-deprecated-DEFINE_PCI_DEVICE_T.patch
 	patches.drivers/e1000e-0144-e1000e-Workaround-for-dropped-packets-in-Gig-100-spe.patch
 	patches.drivers/e1000e-0145-e1000e-Expand-workaround-for-10Mb-HD-throughput-bug.patch
+	patches.drivers/e1000e-0146-e1000e-Fix-issue-with-link-flap-on-82579.patch
 
 	########################################################
 	# Wireless Networking
