--- a/series.conf
+++ b/series.conf
@@ -15155,6 +15155,7 @@
 	patches.drivers/e1000e-0112-e1000e-fix-compiler-warnings.patch
 	patches.drivers/e1000e-0113-e1000e-fix-compiler-warning-maybe-unitialized-variab.patch
 	patches.drivers/e1000e-0114-e1000e-Fix-a-compile-flag-mis-match-for-suspend-resu.patch
+	patches.drivers/e1000e-0115-e1000e-Fix-compilation-warning-when-CONFIG_PM_SLEEP.patch
 
 	########################################################
 	# Wireless Networking
