e1000e: Fix 82579 sets LPI too early (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15160,6 +15160,7 @@
 	patches.drivers/e1000e-0117-e1000e-PTP-lock-in-e1000e_phc_adjustfreq.patch
 	patches.drivers/e1000e-0118-e1000e-Cleanup-unecessary-references.patch
 	patches.drivers/e1000e-0119-e1000e-Resolve-issues-with-Management-Engine-ME-brie.patch
+	patches.drivers/e1000e-0120-e1000e-Fix-82579-sets-LPI-too-early.patch
 
 	########################################################
 	# Wireless Networking
