--- a/series.conf
+++ b/series.conf
@@ -15132,6 +15132,7 @@
 	patches.drivers/e1000e-0089-e1000e-cleanup-whitespace.patch
 	patches.drivers/e1000e-0090-e1000e-Release-mutex-lock-only-if-it-has-been-initia.patch
 	patches.drivers/e1000e-0091-e1000e-Remove-duplicate-assignment-of-default-rx-tx-.patch
+	patches.drivers/e1000e-0092-e1000e-Use-marco-instead-of-digit-for-defining-e1000.patch
 
 	########################################################
 	# Wireless Networking
