e1000e: do not ignore variables which get set a value (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15071,6 +15071,7 @@
 	patches.drivers/e1000e-0028-e1000e-remove-definition-of-struct-which-is-no-longe.patch
 	patches.drivers/e1000e-0029-e1000e-add-comment-to-spinlock_t-definition.patch
 	patches.drivers/e1000e-0030-e1000e-cleanup-remove-unnecessary-function-prototype.patch
+	patches.drivers/e1000e-0031-e1000e-do-not-ignore-variables-which-get-set-a-value.patch
 
 	########################################################
 	# Wireless Networking
