e1000e: cleanup: do not assign a variable a value when not necessary (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15072,6 +15072,7 @@
 	patches.drivers/e1000e-0029-e1000e-add-comment-to-spinlock_t-definition.patch
 	patches.drivers/e1000e-0030-e1000e-cleanup-remove-unnecessary-function-prototype.patch
 	patches.drivers/e1000e-0031-e1000e-do-not-ignore-variables-which-get-set-a-value.patch
+	patches.drivers/e1000e-0032-e1000e-cleanup-do-not-assign-a-variable-a-value-when.patch
 
 	########################################################
 	# Wireless Networking
