--- a/series.conf
+++ b/series.conf
@@ -15076,6 +15076,7 @@
 	patches.drivers/e1000e-0033-e1000e-cleanup-remove-e1000_set_d0_lplu_state.patch
 	patches.drivers/e1000e-0034-e1000e-cleanup-remove-e1000_force_speed_duplex.patch
 	patches.drivers/e1000e-0035-e1000e-cleanup-rename-e1000_get_cfg_done.patch
+	patches.drivers/e1000e-0036-e1000e-cleanup-remove-e1000_get_phy_cfg_done.patch
 
 	########################################################
 	# Wireless Networking
