--- a/series.conf
+++ b/series.conf
@@ -15137,6 +15137,7 @@
 	patches.drivers/e1000e-0094-e1000e-iAMT-connections-drop-on-driver-unload-when-j.patch
 	patches.drivers/e1000e-0095-e1000e-low-throughput-using-4K-jumbos-on-I218.patch
 	patches.drivers/e1000e-0096-e1000e-Tx-hang-on-I218-when-linked-at-100Half-and-sl.patch
+	patches.drivers/e1000e-0097-e1000e-ethtool-unnecessarily-takes-device-out-of-RPM.patch
 
 	########################################################
 	# Wireless Networking
