e1000e: add support for IEEE-1588 PTP (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15061,6 +15061,7 @@
 	patches.drivers/e1000e-0018-e1000e-add-support-for-hardware-timestamping-on-some.patch
 	patches.drivers/e1000e-0019-e1000e-fix-ethtool-offline-register-test-for-I217.patch
 	patches.drivers/e1000e-0020-e1000e-fix-flow-control-thresholds-for-jumbo-frames-.patch
+	patches.drivers/e1000e-0021-e1000e-add-support-for-IEEE-1588-PTP.patch
 
 	########################################################
 	# Wireless Networking
