intel: Remove extern from function prototypes (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15149,6 +15149,7 @@
 	patches.drivers/e1000e-0106-e1000e-cleanup-boolean-comparison-to-true.patch
 	patches.drivers/e1000e-0107-e1000e-fix-overrun-of-PHY-RAR-array.patch
 	patches.drivers/e1000e-0108-DMA-API-net-intel-e1000e-fix-32-bit-DMA-mask-handlin.patch
+	patches.drivers/e1000e-0109-intel-Remove-extern-from-function-prototypes.patch
 
 	########################################################
 	# Wireless Networking
