e1000e: cosmetic move of #defines and function prototypes to the new phy.h (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15094,6 +15094,7 @@
 	patches.drivers/e1000e-0051-e1000e-cosmetic-move-of-defines-to-the-new-80003es2l.patch
 	patches.drivers/e1000e-0052-e1000e-cosmetic-move-of-defines-and-prototypes-to-th.patch
 	patches.drivers/e1000e-0053-e1000e-cosmetic-move-of-function-prototypes-to-the-n.patch
+	patches.drivers/e1000e-0054-e1000e-cosmetic-move-of-defines-and-function-prototy.patch
 
 	########################################################
 	# Wireless Networking
