--- a/series.conf
+++ b/series.conf
@@ -15052,6 +15052,7 @@
 	patches.drivers/e1000e-0009-e1000e-add-missing-bailout-on-error.patch
 	patches.drivers/e1000e-0010-e1000e-resolve-checkpatch-PREFER_PR_LEVEL-warning.patch
 	patches.drivers/e1000e-0011-e1000e-cleanup-redundant-statistics-counter.patch
+	patches.drivers/e1000e-0012-e1000e-cleanup-unusual-comment-placement.patch
 
 	########################################################
 	# Wireless Networking
