--- a/series.conf
+++ b/series.conf
@@ -15054,6 +15054,7 @@
 	patches.drivers/e1000e-0011-e1000e-cleanup-redundant-statistics-counter.patch
 	patches.drivers/e1000e-0012-e1000e-cleanup-unusual-comment-placement.patch
 	patches.drivers/e1000e-0013-e1000e-cleanup-unnecessary-line-wrap.patch
+	patches.drivers/e1000e-0014-e1000e-cleanup-magic-number.patch
 
 	########################################################
 	# Wireless Networking
