e1000e: prevent hardware from automatically configuring PHY on I217/I218 (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15063,6 +15063,7 @@
 	patches.drivers/e1000e-0020-e1000e-fix-flow-control-thresholds-for-jumbo-frames-.patch
 	patches.drivers/e1000e-0021-e1000e-add-support-for-IEEE-1588-PTP.patch
 	patches.drivers/e1000e-0022-e1000e-enable-ECC-on-I217-I218-to-catch-packet-buffe.patch
+	patches.drivers/e1000e-0023-e1000e-prevent-hardware-from-automatically-configuri.patch
 
 	########################################################
 	# Wireless Networking
