--- a/series.conf
+++ b/series.conf
@@ -15091,6 +15091,7 @@
 	patches.drivers/e1000e-0048-e1000e-resolve-Wunused-parameter-compile-warnings.patch
 	patches.drivers/e1000e-0049-e1000e-use-generic-IEEE-MII-definitions.patch
 	patches.drivers/e1000e-0050-e1000e-cosmetic-move-of-defines-and-prototypes-to-th.patch
+	patches.drivers/e1000e-0051-e1000e-cosmetic-move-of-defines-to-the-new-80003es2l.patch
 
 	########################################################
 	# Wireless Networking
