e1000e: cleanup hw.h (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15082,6 +15082,7 @@
 	patches.drivers/e1000e-0039-e1000e-correct-maximum-frame-size-on-82579.patch
 	patches.drivers/e1000e-0040-e1000e-adjust-PM-QoS-request.patch
 	patches.drivers/e1000e-0041-e1000e-cleanup-remove-unused-define.patch
+	patches.drivers/e1000e-0042-e1000e-cleanup-hw.h.patch
 
 	########################################################
 	# Wireless Networking
