e1000e: fix I217/I218 PHY initialization flow (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15140,6 +15140,7 @@
 	patches.drivers/e1000e-0097-e1000e-ethtool-unnecessarily-takes-device-out-of-RPM.patch
 	patches.drivers/e1000e-0098-e1000e-enable-support-for-new-device-IDs.patch
 	patches.drivers/e1000e-0099-e1000e-do-not-resume-device-from-RPM-suspend-to-read.patch
+	patches.drivers/e1000e-0100-e1000e-fix-I217-I218-PHY-initialization-flow.patch
 
 	########################################################
 	# Wireless Networking
