--- a/series.conf
+++ b/series.conf
@@ -15174,6 +15174,7 @@
 	patches.drivers/e1000e-0131-e1000e-Fix-Hardware-Unit-Hang.patch
 	patches.drivers/e1000e-0132-e1000e-Fix-Explicitly-set-Transmit-Control-Register.patch
 	patches.drivers/e1000e-0133-e1000e-add-timeout-for-TX-HW-time-stamping-work.patch
+	patches.drivers/e1000e-0134-e1000e-remove-redundant-if-clause-from-PTP-work.patch
 
 	########################################################
 	# Wireless Networking
