--- a/series.conf
+++ b/series.conf
@@ -15190,6 +15190,7 @@
 	patches.drivers/e1000e-0147-e1000e-Restrict-MDIO-Slow-Mode-workaround-to-relevan.patch
 	patches.drivers/e1000e-0148-net-get-rid-of-SET_ETHTOOL_OPS.patch
 	patches.drivers/e1000e-0149-e1000e-82574-82583-TimeSync-errata-for-SYSTIM-read.patch
+	patches.drivers/e1000e-0150-e1000e-Cleanup-parenthesis-around-return-value.patch
 
 	########################################################
 	# Wireless Networking
