--- a/series.conf
+++ b/series.conf
@@ -15070,6 +15070,7 @@
 	patches.drivers/e1000e-0027-e1000e-fix-PHY-init-workarounds-for-i217-i218.patch
 	patches.drivers/e1000e-0028-e1000e-remove-definition-of-struct-which-is-no-longe.patch
 	patches.drivers/e1000e-0029-e1000e-add-comment-to-spinlock_t-definition.patch
+	patches.drivers/e1000e-0030-e1000e-cleanup-remove-unnecessary-function-prototype.patch
 
 	########################################################
 	# Wireless Networking
