e1000e: cleanup USLEEP_RANGE checkpatch checks (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15113,6 +15113,7 @@
 	patches.drivers/e1000e-0070-e1000e-cleanup-unusually-placed-comments.patch
 	patches.drivers/e1000e-0071-e1000e-cleanup-formatting-of-static-structs.patch
 	patches.drivers/e1000e-0072-e1000e-cleanup-unnecessary-line-breaks.patch
+	patches.drivers/e1000e-0073-e1000e-cleanup-USLEEP_RANGE-checkpatch-checks.patch
 
 	########################################################
 	# Wireless Networking
