e1000e: long access timeouts when I217/I218 MAC and PHY are out of sync (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15120,6 +15120,7 @@
 	patches.drivers/e1000e-0077-e1000e-additional-error-handling-on-PHY-register-acc.patch
 	patches.drivers/e1000e-0078-e1000e-slow-performance-between-two-82579-connected-.patch
 	patches.drivers/e1000e-0079-e1000e-fix-LED-blink-logic-for-designs-with-LEDs-dri.patch
+	patches.drivers/e1000e-0080-e1000e-long-access-timeouts-when-I217-I218-MAC-and-P.patch
 
 	########################################################
 	# Wireless Networking
