--- a/series.conf
+++ b/series.conf
@@ -15126,6 +15126,7 @@
 	patches.drivers/e1000e-0083-e1000e-cleanup-unused-defines.patch
 	patches.drivers/e1000e-0084-e1000e-increase-driver-version-number.patch
 	patches.drivers/e1000e-0085-e1000e-fix-scheduling-while-atomic-bugs.patch
+	patches.drivers/e1000e-0086-e1000e-fix-numeric-overflow-in-phc-settime-method.patch
 
 	########################################################
 	# Wireless Networking
