--- a/series.conf
+++ b/series.conf
@@ -15164,6 +15164,7 @@
 	patches.drivers/e1000e-0121-e1000e-Cleanup-Update-GPL-header-and-Copyright.patch
 	patches.drivers/e1000e-0122-e1000e-Add-missing-branding-strings-in-ich8lan.c.patch
 	patches.drivers/e1000e-0123-e1000e-Refactor-PM-flows.patch
+	patches.drivers/e1000e-0124-e1000e-Refactor-of-Runtime-Power-Management.patch
 
 	########################################################
 	# Wireless Networking
