e1000e: cleanup some whitespace and indentation issues (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15086,6 +15086,7 @@
 	patches.drivers/e1000e-0043-e1000e-cleanup-remove-comments-which-are-no-longer-a.patch
 	patches.drivers/e1000e-0044-e1000e-cleanup-defines.h.patch
 	patches.drivers/e1000e-0045-e1000e-cleanup-group-OR-ed-bit-settings-with-parens.patch
+	patches.drivers/e1000e-0046-e1000e-cleanup-some-whitespace-and-indentation-issue.patch
 
 	########################################################
 	# Wireless Networking
