e1000e: adjust PM QoS request (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15080,6 +15080,7 @@
 	patches.drivers/e1000e-0037-e1000e-cleanup-remove-e1000_get_cable_length.patch
 	patches.drivers/e1000e-0038-e1000e-cleanup-remove-e1000e_commit_phy.patch
 	patches.drivers/e1000e-0039-e1000e-correct-maximum-frame-size-on-82579.patch
+	patches.drivers/e1000e-0040-e1000e-adjust-PM-QoS-request.patch
 
 	########################################################
 	# Wireless Networking
