--- a/series.conf
+++ b/series.conf
@@ -15166,6 +15166,7 @@
 	patches.drivers/e1000e-0123-e1000e-Refactor-PM-flows.patch
 	patches.drivers/e1000e-0124-e1000e-Refactor-of-Runtime-Power-Management.patch
 	patches.drivers/e1000e-0125-e1000e-Feature-Enable-PHY-Ultra-Low-Power-Mode-ULP.patch
+	patches.drivers/e1000e-0126-e1000e-Fix-not-generating-an-error-on-invalid-load-p.patch
 
 	########################################################
 	# Wireless Networking
