e1000e: Invalid Image CSUM bit changed for I217 (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15044,6 +15044,7 @@
 	patches.drivers/e1000e-0001-remove-init-of-dev-perm_addr-in-drivers.patch
 	patches.drivers/e1000e-0002-e1000e-SerDes-autoneg-flow-control.patch
 	patches.drivers/e1000e-0003-e1000e-Acquire-release-semaphore-when-writing-each-E.patch
+	patches.drivers/e1000e-0004-e1000e-Invalid-Image-CSUM-bit-changed-for-I217.patch
 
 	########################################################
 	# Wireless Networking
