e1000e: Fix EEE in S5 w/ Runtime PM enabled (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15198,6 +15198,7 @@
 	patches.drivers/e1000e-0155-e1000e-Fix-CRC-errors-with-jumbo-traffic.patch
 	patches.drivers/e1000e-0156-e1000e-Add-code-to-check-return-values-on-NVM-access.patch
 	patches.drivers/e1000e-0157-e1000e-Add-support-for-EEE-in-Sx-states.patch
+	patches.drivers/e1000e-0158-e1000e-Fix-EEE-in-S5-w-Runtime-PM-enabled.patch
 
 	########################################################
 	# Wireless Networking
