--- a/series.conf
+++ b/series.conf
@@ -15194,6 +15194,7 @@
 	patches.drivers/e1000e-0151-e1000e-Fix-expand-setting-EEE-link-info-to-all-affec.patch
 	patches.drivers/e1000e-0152-e1000e-Out-of-line-__ew32_prepare-__ew32.patch
 	patches.drivers/e1000e-0153-net-use-SPEED_UNKNOWN-and-DUPLEX_UNKNOWN-when-approp.patch
+	patches.drivers/e1000e-0154-e1000e-remove-unnecessary-break-after-return.patch
 
 	########################################################
 	# Wireless Networking
