e1000e: Restrict MDIO Slow Mode workaround to relevant parts (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15187,6 +15187,7 @@
 	patches.drivers/e1000e-0144-e1000e-Workaround-for-dropped-packets-in-Gig-100-spe.patch
 	patches.drivers/e1000e-0145-e1000e-Expand-workaround-for-10Mb-HD-throughput-bug.patch
 	patches.drivers/e1000e-0146-e1000e-Fix-issue-with-link-flap-on-82579.patch
+	patches.drivers/e1000e-0147-e1000e-Restrict-MDIO-Slow-Mode-workaround-to-relevan.patch
 
 	########################################################
 	# Wireless Networking
