e1000e: Tx hang on I218 when linked at 100Half and slow response at 10Mbps (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15136,6 +15136,7 @@
 	patches.drivers/e1000e-0093-e1000e-disable-ASPM-L1-on-82583.patch
 	patches.drivers/e1000e-0094-e1000e-iAMT-connections-drop-on-driver-unload-when-j.patch
 	patches.drivers/e1000e-0095-e1000e-low-throughput-using-4K-jumbos-on-I218.patch
+	patches.drivers/e1000e-0096-e1000e-Tx-hang-on-I218-when-linked-at-100Half-and-sl.patch
 
 	########################################################
 	# Wireless Networking
