e1000e: cleanup PARENTHESIS_ALIGNMENT checkpatch checks (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15107,6 +15107,7 @@
 	patches.drivers/e1000e-0064-e1000e-cleanup-SPACING-checkpatch-errors-and-warning.patch
 	patches.drivers/e1000e-0065-e1000e-cleanup-LONG_LINE-checkpatch-warnings.patch
 	patches.drivers/e1000e-0066-e1000e-cleanup-LEADING_SPACE-checkpatch-warnings.patch
+	patches.drivers/e1000e-0067-e1000e-cleanup-PARENTHESIS_ALIGNMENT-checkpatch-chec.patch
 
 	########################################################
 	# Wireless Networking
