e1000e: Correctly include VLAN_HLEN when changing interface MTU (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15177,6 +15177,7 @@
 	patches.drivers/e1000e-0134-e1000e-remove-redundant-if-clause-from-PTP-work.patch
 	patches.drivers/e1000e-0135-e1000e-Fix-no-connectivity-when-driver-loaded-with-c.patch
 	patches.drivers/e1000e-0136-e1000e-remove-open-coded-skb_cow_head.patch
+	patches.drivers/e1000e-0137-e1000e-Correctly-include-VLAN_HLEN-when-changing-int.patch
 
 	########################################################
 	# Wireless Networking
