e1000e: Fix ethtool offline tests for 82579 parts (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15167,6 +15167,7 @@
 	patches.drivers/e1000e-0124-e1000e-Refactor-of-Runtime-Power-Management.patch
 	patches.drivers/e1000e-0125-e1000e-Feature-Enable-PHY-Ultra-Low-Power-Mode-ULP.patch
 	patches.drivers/e1000e-0126-e1000e-Fix-not-generating-an-error-on-invalid-load-p.patch
+	patches.drivers/e1000e-0127-e1000e-Fix-ethtool-offline-tests-for-82579-parts.patch
 
 	########################################################
 	# Wireless Networking
