--- a/series.conf
+++ b/series.conf
@@ -15145,6 +15145,7 @@
 	patches.drivers/e1000e-0102-e1000e-Add-code-to-check-for-failure-of-pci_disable_.patch
 	patches.drivers/e1000e-0103-e1000e-Avoid-kernel-crash-during-shutdown.patch
 	patches.drivers/e1000e-0104-e1000e-resolve-checkpatch-JIFFIES_COMPARISON-warning.patch
+	patches.drivers/e1000e-0105-e1000e-balance-semaphore-put-get-for-82573.patch
 
 	########################################################
 	# Wireless Networking
