e1000e: Fix Hardware Unit Hang (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15171,6 +15171,7 @@
 	patches.drivers/e1000e-0128-e1000e-Fix-SHRA-register-access-for-82579.patch
 	patches.drivers/e1000e-0129-net-e1000e-calls-skb_set_hash.patch
 	patches.drivers/e1000e-0130-e1000e-fix-the-build-error-when-PM-is-disabled.patch
+	patches.drivers/e1000e-0131-e1000e-Fix-Hardware-Unit-Hang.patch
 
 	########################################################
 	# Wireless Networking
