e1000e: resolve checkpatch JIFFIES_COMPARISON warning (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15144,6 +15144,7 @@
 	patches.drivers/e1000e-0101-e1000e-cleanup-whitespace-in-recent-commit.patch
 	patches.drivers/e1000e-0102-e1000e-Add-code-to-check-for-failure-of-pci_disable_.patch
 	patches.drivers/e1000e-0103-e1000e-Avoid-kernel-crash-during-shutdown.patch
+	patches.drivers/e1000e-0104-e1000e-resolve-checkpatch-JIFFIES_COMPARISON-warning.patch
 
 	########################################################
 	# Wireless Networking
