--- a/series.conf
+++ b/series.conf
@@ -15098,6 +15098,7 @@
 	patches.drivers/e1000e-0055-e1000e-cosmetic-move-of-defines-and-function-prototy.patch
 	patches.drivers/e1000e-0056-e1000e-cosmetic-move-of-defines-and-prototypes-to-th.patch
 	patches.drivers/e1000e-0057-e1000e-convert-enums-of-register-offsets-and-move-de.patch
+	patches.drivers/e1000e-0058-e1000e-cleanup-checkpatch-braces-checks.patch
 
 	########################################################
 	# Wireless Networking
