e1000e: 82574/82583 TimeSync errata for SYSTIM read (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15189,6 +15189,7 @@
 	patches.drivers/e1000e-0146-e1000e-Fix-issue-with-link-flap-on-82579.patch
 	patches.drivers/e1000e-0147-e1000e-Restrict-MDIO-Slow-Mode-workaround-to-relevan.patch
 	patches.drivers/e1000e-0148-net-get-rid-of-SET_ETHTOOL_OPS.patch
+	patches.drivers/e1000e-0149-e1000e-82574-82583-TimeSync-errata-for-SYSTIM-read.patch
 
 	########################################################
 	# Wireless Networking
