--- a/series.conf
+++ b/series.conf
@@ -15117,6 +15117,7 @@
 	patches.drivers/e1000e-0074-e1000e-cleanup-format-of-struct-e1000_opt_list-struc.patch
 	patches.drivers/e1000e-0075-e1000e-cleanup-move-defines-to-appropriate-header-fi.patch
 	patches.drivers/e1000e-0076-e1000e-Add-missing-dma_mapping_error-call-in-e1000_a.patch
+	patches.drivers/e1000e-0077-e1000e-additional-error-handling-on-PHY-register-acc.patch
 
 	########################################################
 	# Wireless Networking
