--- a/series.conf
+++ b/series.conf
@@ -15096,6 +15096,7 @@
 	patches.drivers/e1000e-0053-e1000e-cosmetic-move-of-function-prototypes-to-the-n.patch
 	patches.drivers/e1000e-0054-e1000e-cosmetic-move-of-defines-and-function-prototy.patch
 	patches.drivers/e1000e-0055-e1000e-cosmetic-move-of-defines-and-function-prototy.patch
+	patches.drivers/e1000e-0056-e1000e-cosmetic-move-of-defines-and-prototypes-to-th.patch
 
 	########################################################
 	# Wireless Networking
