e1000e: cleanup (add/remove) blank lines where appropriate (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15109,6 +15109,7 @@
 	patches.drivers/e1000e-0066-e1000e-cleanup-LEADING_SPACE-checkpatch-warnings.patch
 	patches.drivers/e1000e-0067-e1000e-cleanup-PARENTHESIS_ALIGNMENT-checkpatch-chec.patch
 	patches.drivers/e1000e-0068-e1000e-cleanup-SPACING-checkpatch-checks.patch
+	patches.drivers/e1000e-0069-e1000e-cleanup-add-remove-blank-lines-where-appropri.patch
 
 	########################################################
 	# Wireless Networking
