e1000e: workaround DMA unit hang on I218 (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15100,6 +15100,7 @@
 	patches.drivers/e1000e-0057-e1000e-convert-enums-of-register-offsets-and-move-de.patch
 	patches.drivers/e1000e-0058-e1000e-cleanup-checkpatch-braces-checks.patch
 	patches.drivers/e1000e-0059-e1000e-display-a-warning-message-when-SmartSpeed-wor.patch
+	patches.drivers/e1000e-0060-e1000e-workaround-DMA-unit-hang-on-I218.patch
 
 	########################################################
 	# Wireless Networking
