--- a/series.conf
+++ b/series.conf
@@ -15172,6 +15172,7 @@
 	patches.drivers/e1000e-0129-net-e1000e-calls-skb_set_hash.patch
 	patches.drivers/e1000e-0130-e1000e-fix-the-build-error-when-PM-is-disabled.patch
 	patches.drivers/e1000e-0131-e1000e-Fix-Hardware-Unit-Hang.patch
+	patches.drivers/e1000e-0132-e1000e-Fix-Explicitly-set-Transmit-Control-Register.patch
 
 	########################################################
 	# Wireless Networking
