e1000e: Fix a compile flag mis-match for suspend/resume (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15154,6 +15154,7 @@
 	patches.drivers/e1000e-0111-e1000e-Implement-the-SIOCGHWTSTAMP-ioctl.patch
 	patches.drivers/e1000e-0112-e1000e-fix-compiler-warnings.patch
 	patches.drivers/e1000e-0113-e1000e-fix-compiler-warning-maybe-unitialized-variab.patch
+	patches.drivers/e1000e-0114-e1000e-Fix-a-compile-flag-mis-match-for-suspend-resu.patch
 
 	########################################################
 	# Wireless Networking
