remove init of dev->perm_addr in drivers (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15040,6 +15040,9 @@
 	patches.fixes/crash_dump-Make-is_kdump_kernel-accessible-from-modu.patch
 	patches.drivers/enic-0056-enic-reconfigure-resources-for-kdump-crash-kernel.patch
 
+	# e1000e SP4 update (bug#909495 FATE#317394)
+	patches.drivers/e1000e-0001-remove-init-of-dev-perm_addr-in-drivers.patch
+
 	########################################################
 	# Wireless Networking
 	########################################################
