--- a/series.conf
+++ b/series.conf
@@ -15153,6 +15153,7 @@
 	patches.drivers/e1000e-0110-e1000e-Validate-hwtstamp_config-completely-before-ap.patch
 	patches.drivers/e1000e-0111-e1000e-Implement-the-SIOCGHWTSTAMP-ioctl.patch
 	patches.drivers/e1000e-0112-e1000e-fix-compiler-warnings.patch
+	patches.drivers/e1000e-0113-e1000e-fix-compiler-warning-maybe-unitialized-variab.patch
 
 	########################################################
 	# Wireless Networking
