--- a/series.conf
+++ b/series.conf
@@ -15045,6 +15045,7 @@
 	patches.drivers/e1000e-0002-e1000e-SerDes-autoneg-flow-control.patch
 	patches.drivers/e1000e-0003-e1000e-Acquire-release-semaphore-when-writing-each-E.patch
 	patches.drivers/e1000e-0004-e1000e-Invalid-Image-CSUM-bit-changed-for-I217.patch
+	patches.drivers/e1000e-0005-e1000e-helper-functions-for-accessing-EMI-registers.patch
 
 	########################################################
 	# Wireless Networking
